# decode-estimator

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  tagslam_paper.txt
.beads/: issues.jsonl
.cache/clangd/index/: bearing_factor.cpp.4D55F560D05C59A2.idx  bearing_factor.hpp.4CB940617BCA573B.idx  ftc_decode_trajectory.cpp.84EDCBAF2C0E99EE.idx  landmark_map.cpp.35711DF8EEDB4119.idx  landmark_map.hpp.93A671FEACD024D3.idx  pose_estimator.cpp.2BCA840E22464BB2.idx  pose_estimator.hpp.027EAF6F4800F020.idx  simple_localization.cpp.B873B6FC6555D37C.idx  test_bearing_factor.cpp.B47E7105AC8B60CF.idx  test_pose_estimator.cpp.1BD1C16B2F0897EE.idx  types.hpp.0A973991285649AB.idx  visualization.cpp.05D83A63C4B4DBAC.idx  visualization.hpp.78734E9F466CE4F3.idx
cmake/: BuildGTSAMOnly.cmake  FindGTSAM.cmake
cmake/toolchains/: cm4.cmake
examples/: CMakeLists.txt  ftc_decode_trajectory.cpp  simple_localization.cpp
include/decode_estimator/: bearing_factor.hpp  camera_model.hpp  cheirality_factor.hpp  ekf_localizer.hpp  landmark_map.hpp  pose_estimator.hpp  range_factor.hpp  tag_projection_factor.hpp  types.hpp  visualization.hpp
scripts/: build.sh  build_cm4.sh  run_example.sh  test.sh
src/: bearing_factor.cpp  cheirality_factor.cpp  ekf_localizer.cpp  landmark_map.cpp  pose_estimator.cpp  pose_estimator_jni.cpp  range_factor.cpp  tag_projection_factor.cpp  visualization.cpp
tests/: CMakeLists.txt  reproduce_prior_issue.cpp  test_bearing_factor.cpp  test_pose_estimator.cpp  test_range_factor.cpp
